--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <body>
     <div class="header"></div>
     <div class="container">
-      <div class="sidebar"></div>
-      <div class="content"></div>
+      <div class="sidebar">Ceva text</div>
+      <div class="content">Modificare</div>
     </div>
   </body>
 </html>
