--- a/index.html
+++ b/index.html
@@ -2,54 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="../cv-Claudiu/bootstrap/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
     <link rel="stylesheet" href="./styles/style.css" />
-
-    <script
-      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-      integrit
-      y="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-      c
-      rossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-      integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-      crossorigin="anonymous"
-    ></script>
-    <script src="../cv-Claudiu/bootstrap/js/bootstrap.min.js"></script>
     <title>Claudiu Ursu Curriculum Vitae</title>
   </head>
   <body>
     <div class="header">
-      <div class="name">Claudiu Ursu</div>
-      <div class="function">Junior Web Developer</div>
-    </div>
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-6 col_colored d-flex justify-content-center">
-          <div class="profile_picture">
-            <img src="./poza_profil.jpg" alt="cv_profile_picture" />
-          </div>
-          <div class="profile"></div>
-          <div class="contact"></div>
-        </div>
-        <div class="col-6 col_colored d-flex justify-content-center">
-          <div class="experience">
-            <div class="latest_exp"></div>
-            <div class="mid_exp"></div>
-            <div class="oldest_exp"></div>
-          </div>
-          <div class="education"></div>
-          <div class="certifications"></div>
-          <div class="skills"></div>
-        </div>
+      <div class="intro">
+        <div class="name">Claudiu Ursu</div>
+        <div class="function">Junior Web Developer</div>
       </div>
     </div>
+    <div class="container"></div>
   </body>
 </html>
