--- a/index.html
+++ b/index.html
@@ -9,10 +9,39 @@
   <body>
     <div class="header">
       <div class="intro">
-        <div class="name">Claudiu Ursu</div>
+        <div class="name">.:: Claudiu Ursu ::.</div>
         <div class="function">Junior Web Developer</div>
       </div>
     </div>
-    <div class="container"></div>
+    <div class="container">
+      <div class="left_side">
+        <div class="picture"></div>
+        <div class="profile">
+          <h2>Profile</h2>
+          <p>
+            Experienced professional with a demonstrated working history in the
+            information technology and services industry. I am looking for a new
+            challenge in the IT field, where I can further both prove, and
+            improve, my skillset.
+          </p>
+        </div>
+        <div class="contact">
+          <h2>Contact</h2>
+          <div>Address: Oradea, str. Transilvaniei, 12</div>
+          <div>Phone: +40 729 932 169</div>
+          <div>Email: clursu16@gmail.com</div>
+          <div>
+            LinkedIn:
+            <a href="linkedin.com/in/claudiu-alex-ursu">Claudiu Ursu</a>
+          </div>
+        </div>
+      </div>
+      <div class="right_side">
+        <div class="experience"></div>
+        <div class="education"></div>
+        <div class="certifications"></div>
+        <div class="skills"></div>
+      </div>
+    </div>
   </body>
 </html>
