--- a/index.html
+++ b/index.html
@@ -14,17 +14,25 @@
       </div>
     </div>
     <div class="container">
-      <div class="left_side">
-        <div class="picture"></div>
+      <div class="subheader">
         <div class="profile">
-          <h2>Profile</h2>
-          <p>
+          <br>
             Experienced professional with a demonstrated working history in the
             information technology and services industry. I am looking for a new
             challenge in the IT field, where I can further both prove, and
             improve, my skillset.
-          </p>
         </div>
+      </div>
+      <div class="content">
+        <!-- <div class="picture">
+          <img src="../cv-Claudiu/poza_profil.jpg" alt="cv profile picture">
+        </div> -->
+        <div class="experience"></div>
+        <div class="education"></div>
+        <div class="certifications"></div>
+        <div class="skills"></div>
+      </div>
+      <!-- <div class="footer">
         <div class="contact">
           <h2>Contact</h2>
           <div>Address: Oradea, str. Transilvaniei, 12</div>
@@ -34,13 +42,7 @@
             LinkedIn:
             <a href="linkedin.com/in/claudiu-alex-ursu">Claudiu Ursu</a>
           </div>
-        </div>
-      </div>
-      <div class="right_side">
-        <div class="experience"></div>
-        <div class="education"></div>
-        <div class="certifications"></div>
-        <div class="skills"></div>
+        </div> -->
       </div>
     </div>
   </body>
