--- a/index.html
+++ b/index.html
@@ -37,10 +37,9 @@
         </div>
       </div>
       <div class="right_side">
-        <div class="experience"></div>
-        <div class="education"></div>
-        <div class="certifications"></div>
-        <div class="skills"></div>
+        <div class="experience">AAAAAAAAAAAAAA</div>
+        <div class="education">BBBBBBBBBBBBB</div>
+        <div class="skills">CCCCCCCCCCCC</div>
       </div>
     </div>
   </body>
