--- a/index.html
+++ b/index.html
@@ -37,9 +37,66 @@
         </div>
       </div>
       <div class="right_side">
-        <div class="experience">AAAAAAAAAAAAAA</div>
-        <div class="education">BBBBBBBBBBBBB</div>
-        <div class="skills">CCCCCCCCCCCC</div>
+        <div class="experience">
+          <h2>Experience</h2>
+          <h3>CONTENT MARKETING SPECIALIST</h3>
+          <h4>Flipsnack | Jun 2020 - Apr 2021</h4>
+          Increased the company's traffic through blog article creation, SEO
+          optimization, YouTube scripts, product descriptions and other
+          promotional materials.
+          <h3>CONTENT MARKETING SPECIALIST</h3>
+          <h4>Flipsnack | Jun 2020 - Apr 2021</h4>
+          Increased the company's traffic through blog article creation, SEO
+          optimization, YouTube scripts, product descriptions and other
+          promotional materials.
+          <h3>CONTENT MARKETING SPECIALIST</h3>
+          <h4>Flipsnack | Jun 2020 - Apr 2021</h4>
+          Increased the company's traffic through blog article creation, SEO
+          optimization, YouTube scripts, product descriptions and other
+          promotional materials.
+        </div>
+        <div class="education">
+          <h2>Education</h2>
+          <h3>BACHELOR OF PHILOSOPHY, MAJOR IN AESTHETICS</h3>
+          <h4>Babeș - Bolyai University | 2009 - 2013</h4>
+          <h2>Certifications</h2>
+          <h3>
+            Communication Strategies | ETC Essential Training & Consulting,
+            April 2009
+          </h3>
+          <h3>Web Development Course | IT School, undergoing</h3>
+        </div>
+        <div class="skills">
+          <h2>Skills</h2>
+          <div class="first">
+          <div>HTML <br>
+          &#9899&#9899&#9899&#9898&#9898
+          </div>
+          <div>CSS <br>
+          &#9899&#9899&#9898&#9898&#9898
+          </div>
+          <div>Web Development <br>
+          &#9899&#9899&#9898&#9898&#9898
+          </div>
+          <div>WordPress <br>
+          &#9899&#9899&#9899&#9898&#9898
+          </div>
+          </div>
+          <div class="second">
+          <div>Content Writing <br>
+          &#9899&#9899&#9899&#9899&#9899
+          </div>
+          <div>Data Analysis <br>
+          &#9899&#9899&#9899&#9898&#9898
+          </div>
+          <div>Project Management <br>
+          &#9899&#9899&#9899&#9898&#9898
+          </div>
+          <div>Communication <br>
+          &#9899&#9899&#9899&#9899&#9899
+          </div>
+          </div>
+        </div>
       </div>
     </div>
   </body>
