--- a/index.html
+++ b/index.html
@@ -44,16 +44,18 @@
           Increased the company's traffic through blog article creation, SEO
           optimization, YouTube scripts, product descriptions and other
           promotional materials.
-          <h3>CONTENT MARKETING SPECIALIST</h3>
-          <h4>Flipsnack | Jun 2020 - Apr 2021</h4>
-          Increased the company's traffic through blog article creation, SEO
-          optimization, YouTube scripts, product descriptions and other
-          promotional materials.
-          <h3>CONTENT MARKETING SPECIALIST</h3>
-          <h4>Flipsnack | Jun 2020 - Apr 2021</h4>
-          Increased the company's traffic through blog article creation, SEO
-          optimization, YouTube scripts, product descriptions and other
-          promotional materials.
+          <h3>ACTING TEAM LEADER</h3>
+          <h4>Betfair Romania Development | Oct 2018 - Jun 2020</h4>
+          Established and implemented adequate KPI's to measure team
+          activity and performance while organizing and coordinating the
+          team's activity. Acted as a bridge between internal and
+          external departments
+          <h3>SPORTS OPERATOR</h3>
+          <h4>Betfair Romania Development | Jan 2018 - Oct 2018</h4>
+          Supporting the Sports Operations teams with the creation,
+management and settling of events and markets, while
+continuously seeking to improve and optimize working
+practices to drive efficiency and quality.
         </div>
         <div class="education">
           <h2>Education</h2>
